--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-/Util/config.ini
+/.idea/registryPopulateionBot.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
+/.idea/.gitignore
